skill container for mobile fixed - all text is aligned

--- a/portfolio/src/style.css
+++ b/portfolio/src/style.css
@@ -234,7 +234,7 @@ li:hover {
     display: flex;
     flex-direction: column; 
     align-items: center;
-    justify-content: space-between;
+    text-align: center;
     width: 40%;
     padding: 35px 0px 25px 0px;
     margin: 10px;
@@ -254,12 +254,14 @@ li:hover {
 
 .skill--icon {
     width: 65px;
+    margin-bottom: 10px;
     height: auto;
 }
 
 .skill--title {
     text-align: center;
-    font-size: 19px;
+    font-size: 18px;
+    
 }
 
 
@@ -448,7 +450,7 @@ li:hover {
         width: 55px;
     }
     .skill--title {
-        font-size: 18px
+        font-size: 18px;
     }
   }
 
